--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+}
+
 body    {
     font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
     background-image: url("../images/concrete-texture.png");
@@ -21,6 +25,12 @@ h2{
     font-family: Georgia, Times, 'Times New Roman', serif;
     font-size: xx-large;
     border-bottom: 3px solid #dddddd;
+}
+
+h3{
+    color:#4aaaa5;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
 }
 
 p{
@@ -89,8 +99,6 @@ input{
 
 img{
     float: left;
-    margin-right: 20px;
-    margin-left: 20px;
 }
 
 textarea{
@@ -111,17 +119,39 @@ textarea{
     border-right: 1px solid #000000;
 }
 
+#profilepic{
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+.row{
+    margin: 8px;
+    padding: 8px;
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.column{
+    float: left;
+    width: 25%;
+    padding: 8px;
+}
+
 .project{
-    width: 330px;
-    height: 330px;
-    margin-top: 20px;
+    padding: 10px;
 }
 
-.projectimg{
-    width: 80%;
-    height: 80%;
+.project > img{
+    width: 100%;
 }
 
-p.project{
-    justify-content:center;
+.project > p{
+    line-height: 100%;
+}
+
+#submit{
+    border: 3px solid #4aaaa5;
+    border-radius: 5px;
+    background-color: #ffffff; 
 }
