--- a/bonus/assets/css/style.css
+++ b/bonus/assets/css/style.css
@@ -1,5 +1,4 @@
-@media screen and (max-height: 980px){
-  body {
+body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 18px;
   line-height: 34px;
@@ -9,9 +8,51 @@
 
 * {
   box-sizing: border-box;
+  margin: 0;
 }
 
-/* general */
+/* sticky footer styling */
+
+/* https://css-tricks.com/snippets/css/sticky-footer/ */
+
+html,
+body {
+  height: 100%;
+}
+
+.wrapper {
+  height: auto !important;
+  height: 100%;
+  min-height: 100%;
+  margin: 0 auto -105px;
+}
+
+footer,
+.push {
+  height: 105px;
+}
+
+/* end sticky footer styling */
+
+/* start hover styling */
+
+#logo:hover,
+input[type=submit]:hover {
+  background: #5e7f7e;
+}
+
+nav a:hover {
+  color: #5e7f7e;
+}
+
+.social:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+/* end hover styling */
+
+/* general styling */
 
 .container {
   width: 100%;
@@ -54,9 +95,10 @@ h3 {
 /* header */
 
 #masthead {
+  position: fixed;
   z-index: 99;
   width: 100%;
-  margin: 0px;
+  margin: 0 0 30px;
   overflow: auto;
   color: #fff;
   background: #fff;
@@ -107,80 +149,59 @@ footer {
   text-align: center;
   background: #666;
   border-top: 8px solid #4aaaa5;
-  height: 50px;
 }
 
-h3, h2 {
+/* sidebar */
+
+.sidebar {
+  float: right;
+  width: 100%;
+  max-width: 270px;
+  padding: 30px;
+  margin-bottom: 20px;
+  background: #fff;
+  border: 1px solid #ddd;
+}
+
+h3,
+.sidebar h2 {
   padding-bottom: 20px;
   margin-bottom: 15px;
   line-height: 22px;
   border-bottom: 2px solid #eee;
 }
 
+.social {
+  width: 62px;
+  height: 62px;
+  margin-top: 8px;
+  margin-right: 5px;
+}
+
+.social:last-child {
+  margin-right: 0;
+}
+
 /* main */
 
 #main-container {
-  padding-top: 15px;
-  min-height: calc(100vh - 70px);
+  padding-top: 130px;
 }
 
 .main-section {
   float: left;
   width: 100%;
-  max-width: 960px;
+  max-width: 650px;
   padding: 30px;
   margin: 0 0 40px;
   background: #fff;
   border: 1px solid #ddd;
 }
 
-/* portfolio page */
-
-.work {
-  position: relative;
-  float: left;
-  width: 274px;
-  margin: 20px 0 25px;
-  overflow: auto;
-}
-
-.work:nth-child(even) {
-  margin-right: 40px;
-}
-
-.work img {
-  width: 100%;
-  border: 0 none;
-  opacity: 0.8;
-}
-
-.work h3 {
-  position: absolute;
-  bottom: 20px;
-  width: 100%;
-  padding: 15px;
-  margin-bottom: 0;
-  font-weight: 300;
-  line-height: 30px;
-  color: #fff;
-  text-align: center;
-  background: #4aaaa5;
-  border-bottom: 0;
-}
-
-.auth-image {
-  float: left;
-  width: 200px;
-  height: auto;
-  margin-top: 10px;
-  margin-right: 25px;
-}
-
 /* contact page */
 
 #contact-form ul {
   margin-bottom: 20px;
-  list-style: none;
 }
 
 #contact-form li {
@@ -216,38 +237,3 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
-}
-
-@media screen and (max-width: 768px){
-  #masthead{
-    width: 100%;
-  }
-  #logo{
-    margin-left: 5%;
-  }
-  nav{
-    margin-right: 5%;
-  }
-  .auth-image{
-    width: 50%;
-  }
-}
-
-@media screen and (max-width: 640px){
-  #logo{
-    width: 100%;
-    box-align:center;
-    margin-left: 0;
-  } 
-  nav{
-    width: 100%;
-    text-align: center;
-  }
-  .auth-image{
-    width: 100%;
-  }
-  .work{
-    width:100%;
-  }
-}
-
